--- a/app/global.css
+++ b/app/global.css
@@ -7,6 +7,13 @@ a {
   color: black;
 }
 
+.main-container {
+  width: 70%;
+  margin: 30px auto 0;
+  display: flex;
+  align-items: flex-start;
+}
+
 .role-title {
   margin: 0;
   font-size: 32px;
@@ -14,9 +21,9 @@ a {
 }
 
 .navbar {
-  height: 100%;
   width: 250px;
-  position: fixed;
+  height: 750px;
+  position: sticky;
   z-index: 1;
   top: 0;
   left: 0;
@@ -24,10 +31,6 @@ a {
   flex-direction: column;
   justify-content: space-between;
   font-size: 20px;
-}
-
-.navbar-header {
-  margin-top: 30px;
 }
 
 .navbar-item-container {
