--- a/app/global.css
+++ b/app/global.css
@@ -1,3 +1,7 @@
+html {
+  overflow-y: scroll;
+}
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
@@ -76,7 +80,7 @@ a {
   margin-bottom: 15px;
 }
 
-.concert-card-container {
+.card-container {
   font-size: 16px;
   border: 1px solid #d7d7d7;
   border-radius: 8px;
@@ -84,13 +88,18 @@ a {
   margin-bottom: 25px;
 }
 
-.concert-card-title {
+.card-title {
   margin: 0 0 15px 0;
   color: #1692ec;
 }
 
 .separator {
   border-top: 1px solid #d7d7d7;
+}
+
+.concert-card-description {
+  font-weight: normal;
+  line-height: 20px;
 }
 
 .concert-card-footer-container {
@@ -105,16 +114,6 @@ a {
 
 .small-icon-margin {
   margin-left: 5px;
-}
-
-.concert-card-delete-button {
-  display: flex;
-  align-items: center;
-  color: white;
-  background-color: #e84e4e;
-  padding: 10px 15px;
-  border-radius: 5px;
-  border: none;
 }
 
 .statistics-container {
@@ -219,4 +218,8 @@ a {
 .create-form-save-button {
   background-color: #1692ec;
   margin-top: 15px;
+}
+
+.concert-card-delete-button {
+  background-color: #e84e4e;
 }
