--- a/app/global.css
+++ b/app/global.css
@@ -20,6 +20,7 @@ a {
 
 .main-container {
   width: 70%;
+  max-width: 1000px;
   margin: auto;
   display: flex;
   align-items: flex-start;
@@ -142,7 +143,7 @@ a {
 }
 
 .stat-card-container:nth-child(3) {
-  background-color: #e04b4b;
+  background-color: #f96464;
 }
 
 .stat-icon {
