refactor: small css change

--- a/client/app/global.css
+++ b/client/app/global.css
@@ -198,6 +198,7 @@ a {
   font-family: inherit;
   padding: 8px 10px;
   border-radius: 3px;
+  border: 1px solid #5c5c5c;
   width: 100%;
   box-sizing: border-box;
 }
