feat: add history table

--- a/client/app/global.css
+++ b/client/app/global.css
@@ -277,3 +277,19 @@ a {
 .reserve-button {
   background-color: #1692ec;
 }
+
+.table-container {
+  margin: 20px;
+}
+
+.table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.table th,
+.table td {
+  border: 1px solid #5d5d5d;
+  padding: 8px;
+  text-align: left;
+}
