--- a/client/app/global.css
+++ b/client/app/global.css
@@ -234,7 +234,7 @@ a {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  width: 25%;
+  width: 300px;
   text-align: center;
   display: flex;
   flex-direction: column;
