--- a/client/app/_assets/global.css
+++ b/client/app/_assets/global.css
@@ -32,8 +32,8 @@ a {
 }
 
 .navbar {
-  width: 220px;
-  height: 750px;
+  min-width: 220px;
+  height: 100vh;
   position: sticky;
   z-index: 1;
   top: 0;
@@ -44,7 +44,7 @@ a {
   font-size: 20px;
   background-color: white;
   border: 1px solid #eaeaea;
-  padding-top: 17px;
+  padding: 10px 0 10px 0;
 }
 
 .navbar-item-container {
@@ -82,6 +82,7 @@ a {
 }
 
 .card-container {
+  position: relative;
   font-size: 16px;
   border: 1px solid #d7d7d7;
   border-radius: 8px;
@@ -162,7 +163,7 @@ a {
 .create-form-field-container {
   display: grid;
   grid-template-rows: auto auto;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(2, 1fr);
 }
 
 .section1 {
@@ -171,7 +172,6 @@ a {
 }
 
 .section2 {
-  grid-area: 1 / 2;
   position: relative;
 }
 
@@ -179,11 +179,12 @@ a {
   padding-right: 30px;
 }
 
-.section2 .icon {
+.icon {
   position: absolute;
-  top: 82%;
-  right: 8px;
-  transform: translateY(-50%);
+  margin-left: auto;
+  width: 20px;
+  bottom: 3px;
+  right: 5px;
 }
 
 .section3 {
@@ -202,6 +203,7 @@ a {
   border: 1px solid #5c5c5c;
   width: 100%;
   box-sizing: border-box;
+  resize: vertical;
 }
 
 .input::placeholder {
@@ -297,4 +299,82 @@ a {
 .error-messages {
   color: red;
   margin-top: 10px;
+}
+
+@media (max-width: 667px) {
+  .role-title {
+    font-size: 15px;
+  }
+
+  .navbar {
+    min-width: 90px;
+    padding: 0;
+  }
+
+  .navbar-item {
+    padding: 17px 20px;
+    width: 20px;
+  }
+
+  .navbar-item-content {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .navbar-item-text {
+    display: none;
+  }
+
+  .statistics-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+  }
+
+  .stat-number {
+    font-size: 26px;
+  }
+
+  .create-form-field-container {
+    grid-template-rows: auto auto auto;
+    grid-template-columns: 1fr;
+  }
+
+  .section1 {
+    grid-area: 1 / 1 / 2 / 2;
+    margin: 0;
+  }
+
+  .section2 {
+    grid-area: 2 / 1 / 3 / 2;
+  }
+
+  .section3 {
+    grid-area: 3 / 1 / 4 / 2;
+  }
+}
+
+@media (max-width: 400px) {
+  .role-title {
+    font-size: 15px;
+    padding: 10px 0;
+  }
+
+  .navbar {
+    width: 50px;
+  }
+
+  .navbar-item {
+    padding: 10px 11px;
+    width: 20px;
+  }
+
+  .navbar-item-content {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .navbar-item-text {
+    display: none;
+  }
 }
